--- a/pages/intro.html
+++ b/pages/intro.html
@@ -25,6 +25,9 @@
     </p>
     
     <h1>Introductie</h1>
-    <p>[About my project]</p>
+    <p>Highland-games Delux is een uitstekende gelegenheid voor zowel mannen als vrouwen om te laten zien hoe “bad-ass” ze zijn. Het festival zal bestaan uit een Highland-games toernooi, verschillende workshops, foodtrucks en natuurlijk ook een portie muziek.  De doelgroep van mijn concept is vooral mannen met een leeftijd tussen de 24 en 55 jaar maar om niet te discrimineren gaat mijn festival niet enkel om de mannen draaien maar zijn vrouwen ook zeker en vast welkom. Het is dan ook de ideale gelegenheid om nog maar eens aan de mannen te laten zien wie het sterke geslacht is op dit stoere festival. Het festival zal plaatsvinden in het laatste weekend van juli. 
+Mijn website moet een heel duidelijke website zijn. Hierdoor kunnen zowel jong als oud makkelijk hun weg vinden naar alle info, inschrijvingsformulieren, tickets etc. De website zal gebruik maken van buttons. Hierdoor kan je van de ene naar de andere pagina kan en bij de evenementen pagina zal je vanzelf doorgestuurd worden (via een button) naar de pagina waar je je gegevens kan achterlaten om je in te schrijven voor het toernooi. Ook zal de website gebruik maken van een zoekfunctie. Dit is om het gebruik en het navigeren nog makkelijker te maken.
+De website gaat een modern en stoer ontwerp hebben zodat deze zeker bij het festival past. Er moet een duidelijke link zijn tussen het festival en de website. 
+</p>
 </body>
 </html>
